src/z80asm/z80asm2/t/05-expr/expected/error_div.txt
% z88dk-z80asm -v -dump-after-cmdline @t/05-expr//input/error_div.lst t/05-expr//input/empty.asm
Define constant: A = 5
Define constant: B = 2
t/05-expr/input/error_div.lst:3:10: error: Division by zero
    -DE00=1/0
             ^
Define constant: E00 = 0
t/05-expr/input/error_div.lst:4:11: error: Modulo by zero
    -DE01=5%+0
              ^
Define constant: E01 = 0
t/05-expr/input/error_div.lst:5:14: error: Division by zero
    -DE02=A/(B-B)
                 ^
Define constant: E02 = 0
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
verbose	1
ucase_symbols	0
preprocess_only	0
swap_ix_iy	0
date_stamp	0
dump_after_cmdline	1
dump_after_tokenization	0
dump_after_directives	0
dump_after_macro_expansion	0
dump_after_preprocessing	0
m4_options	
perl_options	
cpp_options	
output_dir	
global_def	A	5
global_def	B	2
global_def	E00	0
global_def	E01	0
global_def	E02	0
global_def	__CPU_Z80__	1
global_def	__CPU_ZILOG__	1
input_file	t/05-expr/input/empty.asm
